# kosmosoft

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ext/ft2/libs/: freetype.exp
include/: bezier.h  contours.h  font.h  geometry.h  serialize.h  tools.h
src/: bezier.cpp  contours.cpp  font.cpp  serialize.cpp  tools.cpp
